deployment.yaml
# copied and updated from https://github.com/louislam/uptime-kuma/tree/k8s-unofficial/kubernetes
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate

  template:
    metadata:
      labels:
        app.kubernetes.io/name: uptime-kuma
    spec:
      containers:
      - name: app
        image: uptime-kuma
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
          name: uptime-kuma
          protocol: TCP
        livenessProbe:
          exec:
            command:
              - node
              - extra/healthcheck.js
          initialDelaySeconds: 180
          periodSeconds: 60
          timeoutSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3001
            scheme: HTTP
        resources:
          limits:
            cpu: 500m
            memory: 512M
          requests:
            cpu: 50m
            memory: 128M
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
          - mountPath: /app/data
            name: uptime-kuma
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 60
      volumes:
        - name: uptime-kuma
          persistentVolumeClaim:
            claimName: uptime-kuma
